# workout_log

./: README.md
.github/: dependabot.yml  mergify.yml
.github/workflows/: flutter.yaml  python.yaml
backend/: .flake8  README.md  docker-compose-ci.yml  docker-compose-dev.yml  docker-compose-tests.yml  pyproject.toml  tox.ini
backend/app/: database.py  errors.py  main.py  settings.py
backend/app/crud/: users.py  workout.py
backend/app/fixtures/: users.py  workouts.py
backend/app/models/: core.py  users.py  workouts.py
backend/app/routers/: search.py  users.py  workouts.py
backend/app/tests/: conftest.py
backend/app/tests/routers/: test_search.py  test_users.py  test_workouts.py
backend/app/tests/utils/: test_auth.py  test_users.py
backend/app/utils/: auth.py  misc.py  tokens.py  users.py
backend/docker/ci/: Dockerfile  entrypoint.sh
backend/docker/dev/: Dockerfile
frontend/: README.md  pubspec.yaml
frontend/android/app/: build.gradle
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: api.dart  main.dart  settings.dart
frontend/lib/models/: user.dart  workout.dart
frontend/lib/widgets/: add_workout_form.dart  add_workout_screen.dart  bottom_bar.dart  home_screen.dart  login_form.dart  logout_form.dart  profile_screen.dart  routers.dart
frontend/linux/: CMakeLists.txt  my_application.cc
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc  (+1 more)
(+32 files in other folders)
