[tool.poetry]
name = "workout-log"
version = "0.1.0"
description = "An application to track your workouts"
authors = ["Guillaume <7831777+GuillaumeOj@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.0"
fastapi = {extras = ["all"], version = "*"}
sqlmodel = "^0.0.18"
email-validator = "^2.1.1"
greenlet = "^3.0.3"
alembic = "^1.13.1"
sqlalchemy = {version = "^2.0.30"}
psycopg = {extras = ["binary"], version = "^3.1.19"}
python-multipart = "^0.0.9"
bcrypt = "^4.1.3"
pydantic-settings = "^2.2.1"
daiquiri = "^3.2.5.1"
pyjwt = "^2.8.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.12.0"
flake8 = "^7.0.0"
mypy = "<1.11.0"
pdbpp = "^0.10.3"
ipython = "^8.26.0"
httpx = "^0.27.0"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.coverage.run]
omit = ["app/tests/*"]
